[gd_scene load_steps=9 format=2]

[ext_resource path="res://CoolLine_Max11/script/helpMenu.gd" type="Script" id=1]
[ext_resource path="res://CoolLine_Max11/style/board_panel_style.tres" type="StyleBox" id=2]
[ext_resource path="res://CoolLine_Max11/font/ARCADECLASSIC.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://CoolLine_Max11/font/Konatu_ver_20121218/Konatu_ver_20121218/KonatuTohaba.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://CoolLine_Max11/img/close_icon.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.184314, 0.207843, 0.258824, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 4 )

[node name="helpMenu" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="helpPanel" type="Panel" parent="."]
margin_left = 13.0
margin_top = 19.0
margin_right = 493.0
margin_bottom = 882.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="help_detail" type="RichTextLabel" parent="helpPanel"]
margin_left = 24.0
margin_top = 68.0
margin_right = 456.0
margin_bottom = 834.0
custom_styles/normal = SubResource( 3 )
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="exitButton" type="TextureButton" parent="helpPanel"]
margin_left = 425.413
margin_top = 2.58667
margin_right = 481.413
margin_bottom = 58.5867
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}
